# GIF-004_Python_Scientifique

./: .pylintrc  Pipfile  README.md  pyproject.toml  requirements.txt  setup.bat
.github/workflows/: python-package.yml
modules/m_matplotlib/: sinus.py  temperatures.py
modules/m_numpy/: create_table.py  multidimensional_tables.py
modules/m_scipy/: compute_pi.py  filter_image.py
modules/m_sympy/: derive_function.py  harmonic_oscillator.py  integrative_function.py
scientific_python/definitions/: temperatures_pickle.py
scientific_python/modules/: module_1.py  module_2.py  module_3.py  module_4.py  module_5.py
scientific_python/modules/m_numpy/: chess_matrix.py  linear_equations.py  means_and_variance.py  split_table.py
scientific_python/modules/m_scipy/: filter_image.py  linear_equations.py
scientific_python/modules/m_sympy/: harmonic_oscillator.py
scientific_python/quizzes/: encodage_jpg_1.py  encodage_jpg_2.py  harmonic_oscillator.py  image_convolution.py
scripts/: setup.bat
tests/: test_module_1.py  test_module_2.py  test_module_3.py  test_module_5.py
