[tool.poetry]
name = "GIF-004_Python_Scientifique"
version = "1.0.0"
description = "Dependencies definitions for this project"
authors = [""]

[tool.poetry.dependencies]
python = "3.8.5"
numpy = "*"
scipy  = "*"
sympy  = "*"
matplotlib   = "*"

[tool.poetry.dev-dependencies]
mock = "*"
pytest = "*"
pytest-lazy-fixture = "*"
pytest-timeout = "*"
pytest-mock = "*"
testfixtures = "*"