[build-system]
requires = ["poetry_core>=1.1.4"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "GIF_U0004_ScientificPython"
version = "1.0.0"
description = "H2020 - Scientific Python - Lavel University"
authors = ["Milan Assuied"]
readme = "README.md"
repository = "https://github.com/assuiedmilan/GIF-004_Python_Scientifique"

packages = [
    { include = "scientific_python"}
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
numpy = "1.19.3"
scipy = "*"
sympy = "*"
matplotlib = "*"
pylint = "*"
mock = "*"
pytest = "*"
pytest-lazy-fixture = "*"
pytest-timeout = "*"
pytest-mock = "*"
testfixtures = "*"
wget = "*"
Pillow = "*"